--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
    display: inline-block;
 }
 
-
 /*header*/
 .logo img{
 	width: 100px;
@@ -47,17 +46,41 @@ ul{
 	width:1170px;
 	margin: 0 auto;
 }
+.p.absolute{
+	position: absolute;
+}
+.p-relative{
+    position: relative;
+}
+
+/*end base classes*/
 
 /*grey-bg section*/
 .grey-bg{
      background:#E6E6E6;
-     padding: 46px 0;
+     padding: 30px  0; 
 }
+.image-block{
+	width:100%;
+}
+.text-list{
+	left: 75px;
+	bottom: 30px;
+	font-size: 30px;
+	color:#fff;
+	line-height: 30px;
+}
+.image-logo{
+   right: 30px;
+   bottom: 30px;
+}
+
+/*end grey-bg section*/
 
 /*blue-bg section*/
 .blue-bg{
 	padding: 60px 0 60px 0;
-	background-color:#363E97
+	background-color:#363E97;
 }
 .video{
 	width: 570px;
@@ -99,3 +122,8 @@ ul{
 	width: 347px;
 }
 /*end featured-section*/
+@media (max-width:1000px){
+	.naviugation{
+		display: none;
+	}
+}
